<resources>
    <string name="app_name">COVID TRACKER</string>

    <string name="tracker">TRACKER</string>
    <string name="title1">TIP 1:</string>
    <string name="title1desc">STAY HOME</string>
    <string name="title1sub_desc">Stay home and self-isolate even with minor symptoms such as cough, headache, mild fever, until you recover."</string>
    <string name="title2">TIP 2:</string>
    <string name="title2desc">KEEP A SAFE DISTANCE</string>
    <string name="title2sub_desc">When someone coughs, sneezes, or speaks they spray small liquid droplets from their nose or mouth which you can breathe in the droplets, including the COVID-19 virus if the person has the disease.</string>
    <string name="title3">TIP 3:</string>
    <string name="title3desc">WASH HANDS</string>
    <string name="title3sub_desc">Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water , it kills viruses that may be on your hands.</string>
    <string name="title4">TIP 4:</string>
    <string name="title4desc">COVER UR COUGH</string>
    <string name="title4sub_desc">This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately and wash your hands</string>
    <string name="title5">TIP 5:</string>
    <string name="title5desc">SICK ? CALL HELPLINE</string>
    <string name="title5sub_desc">If you have a fever, cough and difficulty breathing, seek medical attention, but call by telephone in advance .</string>
    <string name="welcome">WELCOME</string>
    <string name="wel_desc">IT IS REALLY NICE TO SEE YOU .    :)</string>
    <string name="already">Already an user ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="quote_1">""Save one life and you are a hero,\nSave 100 lives and you are a nurse.""</string>

    <string-array name="screens">
        <item>HOME</item>
        <item>TIPS</item>
        <item>SIGN-OUT</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>