<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1">


    <TextView
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="100dp"
        android:text="@string/title1"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:fontFamily="@font/blackhan"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        android:layout_below="@+id/homeanim"
        android:gravity="center" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/homeanim"
        android:layout_width="364dp"
        android:layout_height="290dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="419dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="home.json"
        app:lottie_loop="true" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/slide"
        android:layout_width="276dp"
        android:layout_height="138dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="593dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="-1dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_repeatCount="7"
        app:lottie_fileName="slide2.json" />

    <TextView
        android:id="@+id/desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="403dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="275dp"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:text="@string/title1desc"
        android:textColor="@android:color/black"
        android:textSize="35sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:layout_alignBottom="@+id/desc1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="479dp"
        android:layout_marginBottom="-146dp"
        android:gravity="center"
        android:text="@string/title1sub_desc"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/aa"
        />

</RelativeLayout>